--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "redux-form": "^8.2.0"
+    "redux-axios-middleware": "^4.0.0",
+    "redux-form": "^8.2.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
